src/objects/VerifyTx__VTX__c.object
<CustomObject>
    <fields>
        <fullName>VerifyTx__outOfpkt_Ind_Out_of_Network_payernotes__c</fullName>
        <label>Payer Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_amountTimePeriod__c</fullName>
        <label>Amount Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_amount_met__c</fullName>
        <label>Deductible Met (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_outOfPocket_Remaining__c</fullName>
        <label>Out of Pocket Remaining (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_outOfPocket_amountTimePer__c</fullName>
        <label>Amount Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_outOfPocket_amount__c</fullName>
        <label>Out of Pocket Met (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_outOfPocket_remainingTime__c</fullName>
        <label>Remaining Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_outOfPocket_totalTimePeri__c</fullName>
        <label>Total Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_outOfPocket_total__c</fullName>
        <label>Out of Pocket (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_remainingTimePeriod__c</fullName>
        <label>Remaining Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_remaining__c</fullName>
        <label>Deductible Remaining (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_totalTimePeriod__c</fullName>
        <label>Total Time Period (Individual)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__out_of_network_total__c</fullName>
        <label>Deductible (Individual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verify_Insurance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verify Insurance</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Result</relationshipLabel>
        <relationshipName>Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Result</label>
    <listViews>
        <fullName>VerifyTx__All</fullName>
        <columns>NAME</columns>
        <columns>VerifyTx__Reference_Number__c</columns>
        <columns>VerifyTx__Client_Name__c</columns>
        <columns>VerifyTx__VOB__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VTX-{0000}</displayFormat>
        <label>VTX ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Result</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>